winline/Winline.Admin/yamls/dev/deployment.yaml
apiVersion: apps/v1
# Indicates this as a deployment
kind: Deployment 
metadata:
  # Deployment name
  name: webadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: webadmin
      app.kubernetes.io/instance: webadmin
      app: webadmin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: webadmin
        app.kubernetes.io/instance: webadmin
        app: webadmin
    spec:
      imagePullSecrets:
        - name: dexregistry
      containers:
        - name: admin
          image: "hub.dextechnology.com/win-stand-webadmin:latest"
          imagePullPolicy: Always
        # Resources for each container
          ports:
            - name: http-webadmin
              containerPort: 80
            - name: https-webadmin
              containerPort: 443
