winline/Winline.Admin/yamls/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webadmin-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/acme-challenge-type: http01
spec:
  rules:
  - host: admin-dev.winline.tech
    http:
      paths:
        # - path: /
        #   pathType: Prefix
        #   backend:
        #     service: 
        #       name: webadmin-service
        #       port:
        #         number: 443
        - path: /
          pathType: Prefix
          backend:
            service: 
              name: webadmin-service
              port:
                number: 80
  tls:
  - hosts:
    -  admin-dev.winline.tech
    secretName: letsencrypt-prod
